Background image fix and text overflow fix

--- a/styles/pages/_about-us.scss
+++ b/styles/pages/_about-us.scss
@@ -22,6 +22,9 @@
     top: 25vw;
     left:0;
     margin-left: -4vw;
+    max-width: 104vw;
+    overflow: hidden;
+    text-overflow: clip;
 
     @include tablet {
       --text-size: 23vw;
